# pacman-cmake

./: CMakeLists.txt  configure.ac
lib/libalpm/: diskspace.c  diskspace.h
